# elimination-orderings-agrum

./: .gitignore  README.md
datatest/: sachs_mod.bif
datatest/results/new version/: alarm.csv  asia.csv  barley.csv  diabetes.csv  hepar2.csv  insurance.csv  mildew.csv  munin.csv  pathfinder.csv
datatest/results/old/: alarm.csv  asia.csv  barley.csv  hepar2.csv  insurance.csv  mildew.csv
src/: CMakeLists.txt  a.out  eliminationOrderings.tcc  heuristics.tcc  populationEnergy.tcc  test.cpp  testUnit.cpp  utils.tcc
